package lucas.tabelation.types;

/**
 *
 * @author lucas campestrini <lucas.campestrini@gmail.com>
 */
public enum AbstractType {
    
    INT,
    TEXT,
    DATE
    
}
